--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
     stages {
         stage('Checkout Code') {
             steps {
-                git branch: 'main', credentialsId: 'github-ssh-key', url: 'https://github.com/22A91A61E8/CLOUD-NATIVE-EXPENSE-TRACKER-WITH-CI-CD.git'
+                git branch: 'main', credentialsId: 'github-ssh-key', url: 'git@github.com:22A91A61E8/CLOUD-NATIVE-EXPENSE-TRACKER-WITH-CI-CD.git'
                 // IMPORTANT: Replace the URL above with the SSH URL of YOUR repository if it's different.
                 // It should be 'git@github.com:<your-username>/<your-repo-name>.git'
             }
@@ -23,11 +23,11 @@ pipeline {
         stage('Build Backend Docker Image') {
             steps {
                 script {
-                    sh "docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-backend:${APP_VERSION} ./Backend"
+                    // Temporarily run as root for docker commands to bypass permission issues
+                    sh "docker exec -u 0 $(hostname) docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-backend:${APP_VERSION} ./Backend"
                 }
             }
         }
-
         stage('Push Backend Docker Image') {
             steps {
                 script {
@@ -41,12 +41,13 @@ pipeline {
         }
 
         stage('Build Frontend Docker Image') {
-            steps {
-                script {
-                    sh "docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-frontend:${APP_VERSION} ./Frontend"
-                }
-            }
+    steps {
+        script {
+            // Temporarily run as root for docker commands to bypass permission issues
+            sh "docker exec -u 0 $(hostname) docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-frontend:${APP_VERSION} ./Frontend"
         }
+    }
+}
 
         stage('Push Frontend Docker Image') {
             steps {
