--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
             steps {
                 script {
                     // Temporarily run as root for docker commands to bypass permission issues
-                    sh "docker exec -u 0 $(hostname) docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-backend:${APP_VERSION} ./Backend"
+                    sh "docker exec -u 0 \$(hostname) docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-backend:${APP_VERSION} ./Backend"
                 }
             }
         }
