--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,13 +41,14 @@ pipeline {
         }
 
         stage('Build Frontend Docker Image') {
-    steps {
-        script {
-            // Temporarily run as root for docker commands to bypass permission issues
-            sh "docker exec -u 0 $(hostname) docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-frontend:${APP_VERSION} ./Frontend"
+            steps {
+                script {
+                    // Temporarily run as root for docker commands to bypass permission issues
+                    //sh "docker exec -u 0 $(hostname) docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-frontend:${APP_VERSION} ./Frontend"
+                    sh "docker exec -u 0 \$(hostname) docker build -t ${DOCKER_HUB_USERNAME}/expense-tracker-frontend:${APP_VERSION} ./Frontend"
+                }
+            }
         }
-    }
-}
 
         stage('Push Frontend Docker Image') {
             steps {
